--- a/index.html
+++ b/index.html
@@ -1905,6 +1905,14 @@
                 </button>
               </div>
         </div>
+
+		<!-- use overlay to darken image -->
+		<div class="overlay-item" style="background-image: url('assets/images/aboutus18.png')">
+			<div class="overlay"> 
+			</div>
+			<h4>Transparency</h4>
+			<h2>Minh bạch</h2>
+		</div>
 	</div>
 	
 </body>
