--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous"/>
+	<script src="assets/js/language.js"></script>
+	<script src="assets/js/HTMLImporter.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 </head>
 
@@ -1912,6 +1914,21 @@
 			</div>
 			<h4>Transparency</h4>
 			<h2>Minh bạch</h2>
+		</div>
+
+		<!-- multi languages -->
+		<div class="multi-languages">
+			<p lang="en">Home</p>
+			<p lang="vi">Trang chủ</p>
+			<p lang="fr">Homee</p>
+			<a onclick="eng()">English</a>
+			<a onclick="vi()">Vietnamese</a>
+			<a onclick="fr()">French</a>
+		</div>
+
+		<!-- include snippet to multi pages -->
+		<div class="include-snippet">
+			<script>HTMLImporter.import("snippet.html");</script>
 		</div>
 	</div>
 	
