--- a/index.html
+++ b/index.html
@@ -1930,8 +1930,57 @@
 		<div class="include-snippet">
 			<script>HTMLImporter.import("snippet.html");</script>
 		</div>
+
+		<!-- advanced table -->
+		<table class="table table-hover table-bordered zigzag">
+			<thead>
+			  <tr>
+				<!-- <th scope="col"></th>
+				<th scope="col"></th> -->
+			  </tr>
+			</thead>
+			<tbody>
+			  <tr>
+				<th scope="row">1</th>
+				<td>Consular legalize and translate foreign documents related to foreign investor</td>
+			  </tr>
+			  <tr>
+				<th scope="row">2</th>
+				<td>Draft and submit dossiers for Investment Certificate at DPI HCMC</td>
+			  </tr>
+			  <tr>
+				<th scope="row">3</th>
+				<td>Follow-up with officer to update the status of dossiers</td>
+			  </tr>
+			  <tr>
+				<th scope="row">4</th>
+				<td>Obtain and hand-over the Investment Certificate to the Clients</td>
+			  </tr>
+			  <tr>
+				<th scope="row">5</th>
+				<td>Draft and submit dossiers for Business Registration Certificate at DPI HCMC</td>
+			  </tr>
+			  <tr>
+				<th scope="row">6</th>
+				<td>Follow-up with officer to update the status of dossiers</td>
+			  </tr>
+			  <tr>
+				<th scope="row">7</th>
+				<td>Obtain and hand-over the Business Registration Certificate to the Clients</td>
+			  </tr>
+			  <tr>
+				<th scope="row">8</th>
+				<td>Make the stamp for the enterprise</td>
+			  </tr>
+			  <tr>
+				<th scope="row">9</th>
+				<td>Publish enterprise's information on the National Enterprise Portal</td>
+			  </tr>
+			</tbody>
+		</table>
 	</div>
-	
+
+		
 </body>
 	
 </html> 
