--- a/snippet.html
+++ b/snippet.html
@@ -1,7 +1,7 @@
 <nav class="container-fluid">
     <div class="row">
         <div class="left">
-            <img src="assets/image/index/LogoBYECO2.svg" alt="">
+            <img src="assets/images/LogoBYECO2.svg" alt="">
         </div>  
         <div class="center">
             <ul>
@@ -52,16 +52,16 @@
             </ul>
         </div>
         <div class="right">
-            <img src="assets/image/index/us-rect.svg" alt="" onclick="eng()">
-            <img src="assets/image/index/vi-rect.svg" alt="" onclick="vi()">
+            <img src="assets/images/us-rect.svg" alt="" onclick="eng()">
+            <img src="assets/images/vi-rect.svg" alt="" onclick="vi()">
         </div>
         <div class="col-4 menu" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions">
-            <a class="bar"><img src="assets/image/index/bar.svg" alt=""></a>
+            <a class="bar"><img src="assets/images/bar.svg" alt=""></a>
         </div>
         <div class="offcanvas offcanvas-start offcanvas-change" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
             <div class="offcanvas-header">
-                <img src="assets/image/index/LogoBYECO2.svg" alt="">
-                <div data-bs-dismiss="offcanvas"><img src="assets/image/index/cheveron-right.svg" alt=""></div>
+                <img src="assets/images/LogoBYECO2.svg" alt="">
+                <div data-bs-dismiss="offcanvas"><img src="assets/images/cheveron-right.svg" alt=""></div>
             </div>
             <div class="offcanvas-header-bottom">
                 <a href="index.html" id="menu-home"><h5 lang="en">Home</h5></a>
@@ -77,8 +77,8 @@
                 <a href="contact.html" id="menu-contact"><h5 lang="en">Contact</h5></a>
                 <a href="contact.html" id="menu-contact"><h5 lang="vi">Liện hệ</h5></a>
                 <div class="language">
-                    <img src="assets/image/index/us-rect.svg" alt="" onclick="eng()">
-                    <img src="assets/image/index/vi-rect.svg" alt="" onclick="vi()">
+                    <img src="assets/images/us-rect.svg" alt="" onclick="eng()">
+                    <img src="assets/images/vi-rect.svg" alt="" onclick="vi()">
                 </div>
             </div>
         </div>
