--- a/index.html
+++ b/index.html
@@ -1545,19 +1545,19 @@
 		<div class="owl-carousel-container">
 			<div class="owl-carousel owl-theme">
 				<div class="item">
-					<h4><img src="assets/images/b1.png" alt="image" /></h4>
+					<img src="assets/images/thetribe-logo.png" alt="image"/>
 				</div>
 				<div class="item">
-					<h4><img src="assets/images/b2.png" alt="image" /></h4>
+					<img src="assets/images/theartis-logo.gif" alt="image"/>
 				</div>
 				<div class="item">
-					<h4><img src="assets/images/b3.png" alt="image" /></h4>
+					<img src="assets/images/minami-logo.png" alt="image"/>
 				</div>
 				<div class="item">
-					<h4><img src="assets/images/b4.png" alt="image" /></h4>
+					<img src="assets/images/aroura-logo.JPG" alt="image"/>
 				</div>
 				<div class="item">
-					<h4><img src="assets/images/b5.png" alt="image" /></h4>
+				   <img src="assets/images/aifindhome-logo.jfif" alt="image"/>
 				</div>
 			</div>
 		</div>
@@ -1565,25 +1565,27 @@
 			$(document).ready(function() {
 				$(".owl-carousel").owlCarousel();
 			});
-
+	
 			$('.owl-carousel').owlCarousel({
 				loop: true,
 				margin: 10,
-				nav: true,
+				nav: false,
 				responsive: {
 					0: {
 						items: 1
 					},
-					600: {
+					400: {
+						items: 2
+					},
+					800: {
 						items: 3
 					},
-					1000: {
+					1300: {
 						items: 5
 					}
 				}
 			})
 		</script>
-		
 
 		<!-- template 1 -->
 		<div class="template1-container">
