--- a/parallax-scrolling/index.html
+++ b/parallax-scrolling/index.html
@@ -8,13 +8,13 @@
 
 	<title>Document</title>
 
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/parallax-scrolling.css">
 
 	<script src="libs/gsap/gsap.min.js" defer></script>
 	<script src="libs/gsap/ScrollTrigger.min.js" defer></script>
 	<script src="libs/gsap/ScrollSmoother.min.js" defer></script>
 
-	<script src="js/app.js" defer></script>
+	<script src="js/parallax-scrolling.js" defer></script>
 
 </head>
 <body>
