--- a/index.html
+++ b/index.html
@@ -2191,6 +2191,147 @@
 			</span>
 		</div>
 		
+
+		<!-- responsive %width item grid -->
+		<div class="ppj-point">
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/products.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">PRODUCTS <span class="unit">(unit)</span></span>
+					</div>
+					<!-- <h1>10.3 M <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>10.3 M</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/electricity.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">ELECTRICITY <span class="unit">(kW)</span></span>
+					</div>
+					<!-- <h1>10.3 M <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>10.3 M</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/biomass.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">BIOMASS <span class="unit">(ton)</span></span>
+					</div>
+					<!-- <h1>30.3 K <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>30.3 K</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/coal.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">COAL <span class="unit">(ton)</span></span>
+					</div>
+					<!-- <h1>30.3 K <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>30.3 K</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/petrol.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">PETROL <span class="unit">(L)</span></span>
+					</div>
+					<!-- <h1>772 <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>772</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/forklift.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">D.S FORKLIFT <span class="unit">(L)</span></span>
+					</div>
+					<!-- <h1>5,744 <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>5,744</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/forcar.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">D.S FOR CAR <span class="unit">(L)</span></span>
+					</div>
+					<!-- <h1 style="color: red;">1,080 <img src="assets/images/pointdownright.svg" alt="">
+					</h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1 style="color: red;">1,080</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/generator.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">D.S GENERATOR <span class="unit">(L)</span></span>
+					</div>
+					<!-- <h1>29 <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>29</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="ppj-point-item">
+				<div class="ppj-point-item-left">
+					<img src="assets/images/gas.svg" alt="">
+				</div>
+				<div class="ppj-point-item-right">
+					<div>
+						<span class="title">GAS <span class="unit">(ton)</span></span>
+					</div>
+					<!-- <h1>1,032 <img src="assets/images/pointupright.svg" alt=""></h1> -->
+					<div class="ppj-point-item-right-bottom">
+						<h1>1,032</h1>
+						<img src="assets/images/pointupright.svg" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
